//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String
  email String [unique, not null]
  password Password
  products Product [not null]
  lists List [not null]
}

Table Password {
  hash String [unique, not null]
  userId String [unique, not null]
  user User [not null]
}

Table Product {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  number Int [not null]
  userId String [not null]
  user User [not null]
}

Table ListProduct {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  number Int [not null]
  price Float [not null]
  listId String
  list List
}

Table List {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  total Float [not null]
  products ListProduct [not null]
  userId String [not null]
  user User [not null]
}

Ref: Password.userId - User.id [delete: Cascade]

Ref: Product.userId > User.id [delete: Cascade]

Ref: ListProduct.listId > List.id [delete: Cascade]

Ref: List.userId > User.id [delete: Cascade]